# etl_bitcoin_jd

./: .gitignore  Dockerfile  README.md  airflow.cfg  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  webserver_config.py
dags/etl/dags/: pandas_worker_quotes_btc_dag.py
dags/etl/src/infrastructure/data/bitcoin_data/quotes_btc_daily_event/command/: quotes_btc_daily_event.py
dags/etl/src/infrastructure/data/bitcoin_quotes/quotes_btc_daily_event/query/: quotes_btc_daily_event.py
dags/etl/src/infrastructure/data/bitcoin_quotes/quotes_btc_daily_event/service/: quotes_btc_daily_event.py
dags/etl/src/infrastructure/data/utils/: __init__.py  connect_api.py  connect_database.py  writer_database.py
dags/etl/src/worker/quotes_btc/: etl_quotes_btc_daily_event.py
