[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = ""
authors = ["joaobarreto27 <joao.vito1951@gmail.com>"]
readme = "README.md"
packages = [
    { include = "infrastructure", from = "dags/etl/src" },
    { include = "worker", from = "dags/etl/src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pre-commit = ">=4.3.0,<5.0.0"
isort = ">=7.0.0,<8.0.0"
pip-audit = ">=2.9.0,<3.0.0"
taskipy = ">=1.14.1,<2.0.0"
black = ">=25.9.0,<26.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
ruff = ">=0.14.1,<0.15.0"
requests = ">=2.32.5,<3.0.0"
types-requests = ">=2.32.4.20250913,<3.0.0.0"
pydantic = ">=2.12.3,<3.0.0"
mypy = ">=1.18.2,<2.0.0"
psycopg2 = ">=2.9.11,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
sqlalchemy = ">=2.0.44,<3.0.0"
pandas = "==2.1.4"
pandas-stubs = "==2.1.4.231227"


[tool.ruff.lint.pydocstyle]
convention = "google"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort . && black ."
test = "poetry run pytest -v"
kill = "kill -9 $(lsof -t -i :8000)"
docs = "mkdocs serve"
docs-deploy = "mkdocs gh-deploy --clean"
commit = "poetry run pre-commit run --all-files"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["D203", "D213"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
